[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/ant/ant_2.png" type="Texture" id=1]
[ext_resource path="res://scripts/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://assets/fonts/old typewriter font/PARPG.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
size = 56
outline_size = 4
outline_color = Color( 0.129412, 0.129412, 0.129412, 1 )
extra_spacing_space = 18
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 3
outline_color = Color( 0.129412, 0.129412, 0.129412, 1 )
extra_spacing_top = -12
extra_spacing_bottom = -12
extra_spacing_space = 19
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
outline_size = 2
outline_color = Color( 0.129412, 0.129412, 0.129412, 1 )
extra_spacing_space = 5
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
outline_size = 1
outline_color = Color( 0.129412, 0.129412, 0.129412, 1 )
extra_spacing_space = 8
font_data = ExtResource( 8 )

[sub_resource type="Theme" id=8]
default_font = SubResource( 7 )

[node name="MainMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 120
custom_constants/margin_top = 80
custom_constants/margin_left = 120
custom_constants/margin_bottom = 80
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1275.0
margin_bottom = 727.0

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 551.0
margin_bottom = 647.0

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_right = 551.0
margin_bottom = 73.0
theme = SubResource( 2 )
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
margin_right = 551.0
margin_bottom = 73.0
text = "A.N.N.- Ants     "

[node name="Titel_Logo" type="TextureRect" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
visible = false
margin_left = 483.0
margin_right = 583.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
texture = ExtResource( 1 )
expand = true

[node name="MenuOptions" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 77.0
margin_right = 551.0
margin_bottom = 621.0
size_flags_vertical = 3
theme = SubResource( 4 )
custom_constants/separation = 30
alignment = 1

[node name="Continue" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
visible = false
margin_top = 155.0
margin_right = 551.0
margin_bottom = 197.0
mouse_filter = 1
text = "Continue"

[node name="NewGame" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 179.0
margin_right = 551.0
margin_bottom = 221.0
mouse_filter = 1
text = "New Game"

[node name="Options" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 251.0
margin_right = 551.0
margin_bottom = 293.0
mouse_filter = 1
text = "Options"

[node name="Exit" type="Label" parent="HBoxContainer/VBoxContainer/MenuOptions"]
margin_top = 323.0
margin_right = 551.0
margin_bottom = 365.0
mouse_filter = 0
text = "Exit"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 625.0
margin_right = 551.0
margin_bottom = 647.0
theme = SubResource( 6 )

[node name="version" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
margin_right = 146.0
margin_bottom = 22.0
text = "Version  0.1.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer_noOptions" type="CenterContainer" parent="HBoxContainer"]
margin_left = 555.0
margin_right = 1155.0
margin_bottom = 647.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 8 )

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_noOptions"]
margin_right = 600.0
margin_bottom = 647.0
rect_min_size = Vector2( 600, 0 )
text = "------------------------------------------------------
This is a lab-game about an ant-population, which uses an Artifical Neural Network (A.N.N.) to 'control' each ant.

Each single ant gets on spawn its own \"genes\", what defines the kind of acting of the ant. If an ant acts very  well, it gets \"fitness\". A higher \"fitness\" of an ant gives its \"genes\" a higher chance, to be added to the next generation. A \"new generation\" will be spawned, if all ants are finished/disappeard, what can happen through dead, bad work, or end of the day.

At the beginning the A.N.N. knows nothing about anything, but it will train itself by own. Your job is it to speed the learning up, by creating / editting training-levels, where the ants can be trained before the real level starts. After that you can whatch and enjoy how the ants doing its job, just learned by an A.N.N.

(Check out the options before you start. There you can set up your ant-population. Be aware that it will have significant impacts to the A.N.N., but changes can only made for a NEW GAME)
------------------------------------------------------"
align = 3
autowrap = true

[node name="CenterContainer_Options" type="CenterContainer" parent="HBoxContainer"]
visible = false
margin_left = 569.0
margin_right = 1126.0
margin_bottom = 608.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Option_List" type="VBoxContainer" parent="HBoxContainer/CenterContainer_Options"]
margin_left = 156.0
margin_top = 110.0
margin_right = 400.0
margin_bottom = 498.0

[node name="Option_population_size" type="HBoxContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_right = 368.0
margin_bottom = 32.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_population_size"]
margin_right = 70.0
margin_bottom = 32.0
text = "50"
align = 1

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_population_size"]
margin_left = 74.0
margin_top = 5.0
margin_right = 242.0
margin_bottom = 27.0
text = "Population Size"

[node name="Option_Input_DistanceToNest" type="HBoxContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 36.0
margin_right = 368.0
margin_bottom = 76.0

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_DistanceToNest"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_DistanceToNest"]
margin_left = 80.0
margin_top = 9.0
margin_right = 325.0
margin_bottom = 31.0
text = "Input: Distance to Nest"

[node name="Option_Input_Rotation" type="HBoxContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 80.0
margin_right = 368.0
margin_bottom = 120.0

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_Rotation"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_Rotation"]
margin_left = 80.0
margin_top = 9.0
margin_right = 248.0
margin_bottom = 31.0
text = "Input: Rotation"

[node name="Option_Input_Coordinations" type="HBoxContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 124.0
margin_right = 368.0
margin_bottom = 164.0

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_Coordinations"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_Coordinations"]
margin_left = 80.0
margin_top = 9.0
margin_right = 305.0
margin_bottom = 31.0
text = "Input: Coordinations"

[node name="Option_Input_CollisionDetection" type="HBoxContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 168.0
margin_right = 368.0
margin_bottom = 208.0

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_CollisionDetection"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_CollisionDetection"]
margin_left = 80.0
margin_top = 9.0
margin_right = 368.0
margin_bottom = 31.0
text = "Input: Collision Detection"

[node name="Option_Input_TileDetection" type="HBoxContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 212.0
margin_right = 368.0
margin_bottom = 252.0

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_TileDetection"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Input_TileDetection"]
margin_left = 80.0
margin_top = 9.0
margin_right = 309.0
margin_bottom = 31.0
text = "Input: Tile Detection"

[node name="Option_Auto_HiddenLayerSizes" type="HBoxContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 256.0
margin_right = 368.0
margin_bottom = 296.0

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Auto_HiddenLayerSizes"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_Auto_HiddenLayerSizes"]
margin_left = 80.0
margin_top = 9.0
margin_right = 338.0
margin_bottom = 31.0
text = "Auto Hidden-Layer-Sizes"

[node name="Option_value_HiddenLayerSizes" type="HSplitContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 300.0
margin_right = 368.0
margin_bottom = 332.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_value_HiddenLayerSizes"]
margin_right = 70.0
margin_bottom = 32.0
text = "6,3"
align = 1

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_value_HiddenLayerSizes"]
margin_left = 82.0
margin_top = 5.0
margin_right = 368.0
margin_bottom = 27.0
text = "Hidden-Layersizes"

[node name="Option_lifeTimer" type="HBoxContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 336.0
margin_right = 368.0
margin_bottom = 376.0

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_lifeTimer"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_lifeTimer"]
margin_left = 80.0
margin_top = 9.0
margin_right = 188.0
margin_bottom = 31.0
text = "Life Timer"

[node name="Option_value_lifeTimer" type="HSplitContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 380.0
margin_right = 368.0
margin_bottom = 412.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_value_lifeTimer"]
margin_right = 70.0
margin_bottom = 32.0
text = "3000"
align = 1

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_value_lifeTimer"]
margin_left = 82.0
margin_top = 5.0
margin_right = 368.0
margin_bottom = 27.0
text = "Life Timer"

[node name="Option_maxLifeTimer" type="HBoxContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 416.0
margin_right = 368.0
margin_bottom = 456.0

[node name="CheckButton" type="CheckButton" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_maxLifeTimer"]
margin_right = 76.0
margin_bottom = 40.0
pressed = true

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_maxLifeTimer"]
margin_left = 80.0
margin_top = 9.0
margin_right = 227.0
margin_bottom = 31.0
text = "Max Life Timer"

[node name="Option_value_maxLifeTimer" type="HSplitContainer" parent="HBoxContainer/CenterContainer_Options/Option_List"]
margin_top = 460.0
margin_right = 368.0
margin_bottom = 492.0

[node name="LineEdit" type="LineEdit" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_value_maxLifeTimer"]
margin_right = 70.0
margin_bottom = 32.0
text = "15000"
align = 1

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer_Options/Option_List/Option_value_maxLifeTimer"]
margin_left = 82.0
margin_top = 5.0
margin_right = 368.0
margin_bottom = 27.0
text = "Max Life Timer"

[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Continue" to="." method="_on_Continue_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/Continue" to="." method="_on_Continue_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/NewGame" to="." method="_on_NewGame_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/Options" to="." method="_on_Options_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/VBoxContainer/MenuOptions/Exit" to="." method="_on_Exit_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/VBoxContainer/MenuOptions/Exit" to="." method="_on_Exit_mouse_exited"]
